--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="pure-u-1 pure-u-md-1-2 introduce flex">
             <div class="basic text-center">
                 <div class="basic-box">
-                    <h3 class="head text-shadow">对赵可感兴趣？</h3>
+                    <h3 class="head text-shadow">对林福宁感兴趣？</h3>
                     <p class="intro text-shadow">
                         Now he is a Front-End engineer.
                     </p>
