添加职业规划文章

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div id="rainCanvas"></div>
     <header class="header pure-g">
         <div class="pure-u-1-2 header-left">
-            <h3><a href="https://github.com/LningCode">natee</a><a href="http://www.mnog.org/vueapp/" style="margin-left: 3em;">VueApp</a></h3>
+            <h3><a href="https://github.com/LningCode">natee</a><a href="http://www.mnog.org/vueapp/" style="margin-left: 3em;">VueApp</a>
+            <a href="http://www.mnog.org/jod/" style="margin-left: 3em;">职业规划</a>
+            </h3>
         </div>
         <div class="pure-u-1-2 header-right">
             <span class="menu-button icon-list4 toggle-contact"></span>
