--- a/demo/turnplate.html
+++ b/demo/turnplate.html
@@ -57,7 +57,7 @@
 				</div>
 			</div>
 		</div>
-		<div></div>
+		<div>文件地址：https://github.com/LningCode/LningCode.github.io/blob/master/demo/turnplate.html</div>
 	</div>
 </body>
 <script>
