--- a/whispark_html/unsubscribe.html
+++ b/whispark_html/unsubscribe.html
@@ -62,7 +62,7 @@
 <body>
     <header class="navbar navbar-static-top wk-docs-nav">
         <div class="wk-container">
-            <a href="index.html" class="navbar-header"><img src="./assets/common/img/playssion-logo.png" alt=""></a>
+            <a href="index.html" class="navbar-header"><img src="https://test.whispark.com/static/imgs/playssion-logo.png" alt=""></a>
         </div>
     </header>
     <div class="uns-main">
